# Migrating-to-Qt6

./: README.md
CMake Templates/: Console and Concurrent.txt  Console and Network.txt  Console and Sql.txt  Console.txt  QML.txt  Widgets.txt
Code Examples/qmlb-13-6/: CMakeLists.txt  backend.cpp  backend.h  main.cpp  main.qml  qml.qrc  qmlb-13-6.pro
Code Examples/qt5dp-10-1/: CMakeLists.txt  main.cpp  passwordvalidator.cpp  passwordvalidator.h  qt5dp-10-1.pro
Code Examples/qt5dp-15-5/: CMakeLists.txt  animal.cpp  dialog.cpp  dialog.h  dialog.ui  main.cpp  qt5dp-15-5.pro
Code Examples/qt5dp-15-6/: CMakeLists.txt  animal.cpp  animal.h  main.cpp  main.qml  qt5dp-15-6.pro
Code Examples/qtca-1-8/: CMakeLists.txt  main.cpp  qtca-1-8.pro  worker.cpp  worker.h
Code Examples/qtca-2-3/: CMakeLists.txt  chat.cpp  chat.h  commandline.cpp  commandline.h  main.cpp  qtca-2-3.pro
Code Examples/qtca-2-5/: CMakeLists.txt  client.cpp  main.cpp  qtca-2-5.pro
Code Examples/qtca-2-9/: CMakeLists.txt  main.cpp  qtca-2-9.pro  worker.cpp  worker.h
Code Examples/qtcb11-3/: CMakeLists.txt  main.cpp  qtcb11-3.pro  test.cpp  test.h  watcher.cpp  watcher.h
Code Examples/qtcb15-4/: main.cpp
Code Examples/qtci2-5/: CMakeLists.txt  main.cpp
Code Examples/qtci4-6/: CMakeLists.txt  main.cpp
Code Examples/qtci5-2/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  qtci5-2.pro  test.cpp  test.h
Code Examples/qtci6-5/: CMakeLists.txt  main.cpp
Code Examples/qtci8-4/: CMakeLists.txt  converter.cpp  converter.h  main.cpp  qtci8-4.pro  test.cpp  test.h
(+20 files in other folders)
